--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,16 @@
 build
+vendor
 certs
 dist
-venv
 env
 .idea
+.vscode
 *.pyc
 *~
 .coverage
 cover
-busybox.tar
-calico-node.tar
-routereflector.tar
-calicobuild.created
-caliconode.created
-calico_containers/pycalico.egg-info/
-busybox.tgz
-calico-node-libnetwork.tgz
-calico-node.tgz
 calicoctl
-docker
+*.tar
+*.created
+libnetwork-plugin
 
