--- a/glide.yaml
+++ b/glide.yaml
@@ -1,12 +1,6 @@
 package: github.com/projectcalico/libnetwork-plugin
 import:
-- package: github.com/coreos/etcd
-  version: ^3.1.0-rc.0
-  subpackages:
-  - client
-  - pkg/transport
 - package: github.com/docker/engine-api
-  version: ~0.4.0
   subpackages:
   - client
 - package: github.com/docker/go-plugins-helpers
@@ -18,9 +12,7 @@ import:
 - package: github.com/projectcalico/libcalico-go
   subpackages:
   - lib/api
-  - lib/backend/etcd
   - lib/client
+  - lib/errors
   - lib/net
-- package: golang.org/x/net
-  subpackages:
-  - context
+- package: github.com/vishvananda/netlink
